# Copper-MC

./: CMakeLists.txt  README.md
.cmake/: find_libraries.cmake
source/: main.c
source/logger/: logger.c  logger.h
source/network/: network_manager.c  network_manager.h  socket.c  socket.h  varints.c  varints.h
source/network/packets/: packet_builder.c  packet_builder.h  packet_reader.c  packet_reader.h  packets.h
source/server/: server.c  server.h  world.h
source/util/: hexdump.h  order.h  platform.h  types.h
source/util/containers/: buffer.c  buffer.h  queue.c  queue.h  slotmap.c  slotmap.h
